syntax = "proto3";

option csharp_namespace = "SalesProductApi";

package SalesProductApi;

// The product service definition.
service ProductServiceProto {
  // Sends a product
  rpc SendProduct (ProductRequest) returns (ProductReply);
  // get all products
  rpc GetProducts (Empty) returns (ItemResponse);
  // get product by id
  rpc GetProduct (ProductId) returns (ProductResponse);
  // update amount of products
  rpc UpdateAmount (ItemUpdateAmount) returns (UpdateAmountResponse);
}

// The request message containing the fields product.
message ProductRequest {
  int32 id = 1;
  string description = 2;
  string amount = 3;
  string price = 4;
  string status = 5;
}

message ItemUpdateAmount {
  repeated UpdateAmountRequest items = 1;
}

message UpdateAmountRequest {
    int32 id = 1;
    string amount = 2;
}

message UpdateAmountResponse {
    string message = 1;
}

message ProductId {
  int32 id = 1;
}

// The response message containing the product.
message ProductReply {
  string message = 1;
}


message ProductResponse {
  int32 id = 1;
  string description = 2;
  string amount = 3;
  string price = 4;
  string status = 5;
}

message ItemResponse {
  repeated ProductResponse items = 1;
}

message Empty {

}